webpack basic config

--- a/test/tpl/index.html
+++ b/test/tpl/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section>
-        <div class="note-wrapper">
+        <div class="note-wrapper test">
             <small>tiny demostration for testing purposes</small>
         </div>
     </section>
