--- a/test/static/index.html
+++ b/test/static/index.html
@@ -9,6 +9,12 @@
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .webtab {
+            height: 1px;
+            width: 15px;
+        }
+    </style>
 </head>
 <body>
     <section>
