project rename to webmarks

--- a/test/static/index.html
+++ b/test/static/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Webtabs.js test</title>
+    <title>Webmarks.js test</title>
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
-        .webtab {
+        .webmark {
             height: 1px;
             width: 15px;
         }
