mark sizes relative to elements `renderSizes`

--- a/test/static/index.html
+++ b/test/static/index.html
@@ -24,8 +24,8 @@
     </section>
     <section>
         <h1 class="title">Comment thread</h1>
-        <div class="comment-wrapper parent">
-            <div class="comment">
+        <div class="comment-wrapper">
+            <div class="comment parent">
                 <div class="author">magna</div>
                 <div class="body"><p>aliqua minim cillum excepteur minim.</p><p>Enim enim fugiat consequat sunt tempor aliquip tempor ipsum qui ullamco nisi cillum aliquip esse. Exercitation nisi aliqua nisi qui magna ex. Minim amet ullamco elit ad nostrud proident enim ex Lorem. Elit laborum duis elit veniam id sit minim dolor. Do mollit eu cillum exercitation excepteur ex mollit quis enim. Laboris excepteur et eiusmod mollit cupidatat voluptate culpa proident laborum proident duis aute velit.</p><p>Nisi non adipisicing veniam occaecat nulla laborum non. Tempor id tempor excepteur proident quis mollit sint. Ea minim eiusmod commodo amet cupidatat qui reprehenderit laborum occaecat occaecat veniam nostrud in. Est exercitation adipisicing ad ex velit laborum duis excepteur officia aliqua dolore nisi occaecat deserunt.</p><p>Amet culpa tempor in ipsum ex do ipsum non aliquip commodo ea reprehenderit. Commodo aute quis ullamco tempor aliqua officia velit veniam reprehenderit anim Lorem aute. Magna velit eu non sint labore elit reprehenderit cupidatat elit esse sit aliqua reprehenderit.</p></div>
             </div>
@@ -90,8 +90,8 @@
                 </div>
             </div>
         </div>
-        <div class="comment-wrapper parent">
-            <div class="comment">
+        <div class="comment-wrapper">
+            <div class="comment parent">
                 <div class="author">irure</div>
                 <div class="body"><p>Excepteur do pariatur exercitation ut.</p></div>
             </div>
@@ -156,8 +156,8 @@
                 </div>
             </div>
         </div>
-        <div class="comment-wrapper parent">
-            <div class="comment">
+        <div class="comment-wrapper">
+            <div class="comment parent">
                 <div class="author">voluptate</div>
                 <div class="body"><p>Laboris ex qui non irure officia cupidatat consequat aliqua.</p></div>
             </div>
@@ -222,8 +222,8 @@
                 </div>
             </div>
         </div>
-        <div class="comment-wrapper parent">
-            <div class="comment">
+        <div class="comment-wrapper">
+            <div class="comment parent">
                 <div class="author">pieapple</div>
                 <div class="body"><p>Eiusmod nulla occaecat minim Lorem tempor reprehenderit dolore.</p></div>
             </div>
@@ -288,8 +288,8 @@
                 </div>
             </div>
         </div>
-        <div class="comment-wrapper parent">
-            <div class="comment">
+        <div class="comment-wrapper">
+            <div class="comment parent">
                 <div class="author">floppysir</div>
                 <div class="body"><p>Nulla eiusmod laboris tempor et duis consectetur magna consequat nulla.</p></div>
             </div>
