demo minor changes

--- a/test/static/index.html
+++ b/test/static/index.html
@@ -10,8 +10,15 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
+        .webmarks {
+            background-color: #e8e8e8;
+        }
+
         .webmark {
             height: 1px;
+        }
+
+        .webmarks, .webmark {
             width: 15px;
         }
     </style>
