--- a/demo/tutorial.html
+++ b/demo/tutorial.html
@@ -12,10 +12,11 @@
             margin: 0;
         }
     </style>
-    <script src="webmarks.min.js"></script>
+    <script src="lib/webmarks.min.js"></script>
     <script>
         const opts = {
             renderSizes: true,
+            alwaysVisible: true,
         }
 
         const steps = document.getElementsByClassName('step');
