--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section>
-        <iframe src="//demo/tutorial.html" frameborder="0"></iframe>
+        <iframe src="demo/tutorial.html" frameborder="0"></iframe>
     </section>
 </body>
 </html>
