--- a/demo/tutorial.html
+++ b/demo/tutorial.html
@@ -12,7 +12,7 @@
             margin: 0;
         }
     </style>
-    <script src="lib/webmarks.min.js"></script>
+    <script src="lib/webmarks.js"></script>
     <script>
         const opts = {
             renderSizes: true,
