fix: tutorial.html

--- a/demo/tutorial.html
+++ b/demo/tutorial.html
@@ -20,7 +20,7 @@
         }
 
         const steps = document.getElementsByClassName('step');
-        const wm = Webmarks(steps, opts);
+        const wm = new Webmarks(steps, opts);
     </script>
 </head>
 <body>
