full iframe demo tutorial

--- a/demo/tutorial.html
+++ b/demo/tutorial.html
@@ -12,6 +12,12 @@
             margin: 0;
         }
 
+        .step {
+            padding: 5px;
+            margin: 0 auto;
+            max-width: 350px;
+        }
+
         .shapes {
             display: flex;
         }
