--- a/demo/tutorial.html
+++ b/demo/tutorial.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tutorial</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="lib/css/default.css">
+    <link rel="stylesheet" href="lib/css/content.css">
     <style>
         * {
             font-family: 'Raleway', sans-serif;
@@ -16,62 +18,14 @@
         .title {
             margin: 20px;
         }
-
-        .step {
-            padding: 5px;
-            margin: 0 auto;
-            max-width: 350px;
-        }
-
-        .shapes {
-            display: flex;
-        }
-
-        .rect {
-            width: 200px;
-            height: 10px;
-        }
-
-        .rect-x2 {
-            width: 290px;
-            height: 10px;
-        }
-
-        .square {
-            width: 50px;
-            height: 50px;
-        }
-
-        .square-x2 {
-            width: 290px;
-            height: 200px;
-        }
-
-        .rect, .rect-x2, .square , .square-x2 {
-            margin: 10px 20px;
-            background: #f1f1f1;
-        }
-
-        .webmarks {
-            background-color: #e8e8e8;
-        }
-
-        .webmark {
-            height: 1px;
-        }
-
-        .webmarks, .webmark {
-            width: 15px;
-        }
     </style>
-    <script src="lib/webmarks.js"></script>
+    <script src="lib/js/webmarks.js"></script>
     <script>
         let wm;
 
         const opts = {
             renderSizes: true,
             alwaysVisible: true,
-            beforeCreation: () => wm.visible = false,
         }
 
         const steps = document.getElementsByClassName('step-title');
