--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'Noto Serif';
         }
 
         body {
@@ -130,7 +131,7 @@
         }
 
         .demo > .text h3 {
-            font-size: 2em;
+            font-size: 1.6em;
             margin-top: 25px;
             font-weight: 100;
         }
