--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webmarks</title>
-<link href="public/css/bundle.css" rel="stylesheet"></head>
+</head>
 <body>
     <div class="container">
         <section id="demo-1">
@@ -564,5 +564,5 @@
             </div>
         </section>
     </div>
-<script type="text/javascript" src="public/bundle.min.js"></script></body>
+</body>
 </html>
