--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7,8 +7,40 @@
     <title>Webmarks</title>
 </head>
 <body>
+    <section>
+        <div class="hero">
+            <div class="container">
+                <div class="notebook">
+                 <img src="./img/notebook.png" alt="">
+                </div>
+                <div class="content">
+                    <div class="nav-wrapper">
+                        <div class="logo">
+                            <img src="./img/logo.png" alt="">
+                        </div>
+                        <div class="nav">
+                            <a href="#"><img src="./img/github_32px.png"></a>
+                            <a href="#">docs</a>
+                            <a href="#">themes</a>
+                            <a href="#">report a bug</a>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <h1>W</h1><h1>e</h1><h1>b</h1><h1>m</h1><h1>a</h1><h1>r</h1><h1>k</h1><h1>s</h1>
+                        <h3>Improve the browsing UX by giving your users a  reference of the relevant sections.</h3>
+                    </div>
+                    <div class="scroll-call">
+                        <h3>scroll down for demo</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="container">
         <section id="demo-1">
+            <div class="big-title">
+                <h1>Use cases</h1>
+            </div>
             <div class="demo tutorial">
                 <div class="content">
                     <div class="steps">
@@ -563,6 +595,30 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="big-title-2">
+                <h1>Links</h1>
+            </div>
+            <div class="cards-wrapper">
+                <div class="link-cards">
+                    <div class="github link-card">
+                        <h1>Check out the source code & leave your feedback.</h1>
+                        <img height="24" src="./img/github_32px.png" alt="">
+                    </div>
+                    <div class="docs link-card">
+                        <h2>Get started</h2>
+                        <hr>
+                        <h1>Straight to the point.</h1>
+                        <img height="48" src="./img/logo.png" alt="">
+                    </div>
+                </div>
+                <div class="credits-card link-card">
+                    <p>Made with <span class="heart">♥</span>by</p>
+                    <img class="github" src="./img/github_32px.png" alt="" height="16" width="16">
+                    <p>@pmrt</p>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
