--- a/src/static/index.html
+++ b/src/static/index.html
@@ -595,7 +595,7 @@
             </div>
         </div>
     </section>
-    <!-- <footer>
+    <footer>
         <div class="big-title-2">
             <h1>Links</h1>
         </div>
@@ -612,12 +612,15 @@
                     <img height="48" src="./img/logo.png" alt="">
                 </div>
             </div>
-            <div class="credits-card link-card">
-                <p>Made with <span class="heart">♥</span>by</p>
-                <img class="github" src="./img/github_32px.png" alt="" height="16" width="16">
-                <p>@pmrt</p>
+            <div class="link-cards">
+                <div class="credits-card link-card">
+                    <p>Made with <span class="heart">♥</span>by</p>
+                    <img class="github-icon" src="./img/github_32px.png" alt="" height="16" width="16">
+                    <p>@pmrt</p>
+                </div>
+                <div class="link-card"></div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
